; ModuleID = '/home/carl/AnghaBench/macvim/src/extr_dosinst.c_change_directories_choice.c'
source_filename = "/home/carl/AnghaBench/macvim/src/extr_dosinst.c_change_directories_choice.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@vimfiles_dir_choices = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [5 x i8] c"HOME\00", align 1
@vimfiles_dir_choice = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @change_directories_choice to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @change_directories_choice(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* @vimfiles_dir_choices, align 4
  %5 = call i32 @TABLE_SIZE(i32 %4)
  store i32 %5, i32* %3, align 4
  %6 = call i32* @getenv(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0))
  %7 = icmp eq i32* %6, null
  br i1 %7, label %8, label %11

8:                                                ; preds = %1
  %9 = load i32, i32* %3, align 4
  %10 = add nsw i32 %9, -1
  store i32 %10, i32* %3, align 4
  br label %11

11:                                               ; preds = %8, %1
  %12 = load i32, i32* @vimfiles_dir_choices, align 4
  %13 = load i32, i32* %3, align 4
  %14 = call i32 @get_choice(i32 %12, i32 %13)
  store i32 %14, i32* @vimfiles_dir_choice, align 4
  %15 = load i32, i32* %2, align 4
  %16 = call i32 @set_directories_text(i32 %15)
  ret void
}

declare dso_local i32 @TABLE_SIZE(i32) #1

declare dso_local i32* @getenv(i8*) #1

declare dso_local i32 @get_choice(i32, i32) #1

declare dso_local i32 @set_directories_text(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
